--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,12 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+        <receiver
+            android:name=".broadcastreciever"
+            android:enabled="true"
+            android:exported="false" />
     </application>
 
 </manifest>
